# starship-game

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TODO  rustfmt.toml  test.sh
game-centralized/: Cargo.toml
game-centralized/src/: main.rs  ws.rs
game-decentralized/: Cargo.toml
game-decentralized-bevy/: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html  test_wasm.sh
game-decentralized-bevy/dApp/: .env  README.md  config-overrides.js  package-lock.json  package.json
game-decentralized-bevy/dApp/src/: App.css  App.tsx  GameEntity.ts  PlayerEntity.ts  RegisterPlayer.tsx  TokenEntity.ts  WasmDappGame.tsx  gameFunctions.ts  gameMethods.ts  global.d.ts  index.tsx  utils.ts
game-decentralized-bevy/dApp/src/components/: App.css  App.tsx  RegisterPlayer.tsx  WasmDappGame.tsx
game-decentralized-bevy/dApp/src/entities/: CollectedTokenEntity.ts  GameEntity.ts  GameEvent.ts  LaserOutOfBoundsEvent.ts  NewLaserEvent.ts  PlayerEntity.ts  PlayerLasers.ts
game-decentralized-bevy/dApp/src/utils/: asyncEffect.ts  massa.ts  time.ts  utils.ts  withRouter.tsx
game-decentralized-bevy/src/: components.rs  errors.rs  events.rs  fire_controller.rs  main.rs  player.rs  resources.rs  rust_js_mappers.rs  utils.rs  wasm.rs  wasm_bindings.rs
game-decentralized-macroquad/: Cargo.toml  README.md
game-decentralized-macroquad/src/: .gitignore  events.rs  main.rs  massa.rs  near.rs
game-decentralized/src/: entities.rs  events.rs  main.rs  massa.rs  messages.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
shared/src/: lib.rs
smart_contracts/: .env  .gitignore  README.md  deploy-game-runner.ts  deploy-game.ts  deploy-token.ts  deploy-website.ts  fund-game-engine.ts  fund-game.ts  package-lock.json  package.json  test-events.ts  test-game.ts  tsconfig.json
smart_contracts/game/: asconfig.json  include_base64.js  match.test.js  package-lock.json  package.json
smart_contracts/game/assembly/gameEngine/: RegisterPlayerRequest.ts  asserts.ts  caller.ts  collectedEntity.ts  collectibleEntity.ts  collectibles.ts  config.ts  gameEvent.ts  index.ts  lasers.ts  playerEntity.ts  players.ts  rectangle.ts  runner.ts.tmpl  starter.ts.tmpl  storage.ts  utils.ts
smart_contracts/game/assembly/gameEngine/__tests__/: gameEngine.spec.ts
smart_contracts/game/assembly/gameEngine/entities/: laserEntity.ts  playerEntity.ts
smart_contracts/game/assembly/gameEngine/events/: collectedEntityEvent.ts  gameEmitter.ts  gameEvent.ts  laserDestroyedEvent.ts  laserToInterpolate.ts  newLaserShot.ts  playerTokenCollected.ts
smart_contracts/game/assembly/gameEngine/requests/: RegisterPlayerRequest.ts  SetPlayerLaserRequest.ts
smart_contracts/game/assembly/gameEngine/utils/: mappers.ts  random.ts  rectangle.ts  utils.ts
smart_contracts/game/assembly/starshipToken/: caller.ts  funder.ts.tmpl  index.ts
smart_contracts/game/assembly/starshipToken/__tests__/: starshipToken.spec.ts
