[package]
name = "game_centralized"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.24"
tungstenite = "0.17"
serde = "1.0"
serde_json = "1.0"
shared = { path = "../shared" }
glam = { version = "0.14", features = ["scalar-math","serde"] }

[profile.dev.package."*"]
opt-level = 3 # Speed-up the CI