[package]
name = "game_decentralized_macroquad"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.24"
tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.1", features = ["full"] }
getrandom = { version="0.2", features=["wasm-bindgen"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
wasm-bindgen = "0.2.81"
near-primitives = "0.14.0"
strum = "0.24"
strum_macros = "0.24"
anyhow = "1.0"
displaydoc = "0.2"
thiserror = "1.0"
lazy_static = "1.4"

# near sdk
[dependencies.near-jsonrpc-client]
git = "https://github.com/near/near-jsonrpc-client-rs"

# massa sdk
[dependencies.massa_sdk]
git = "https://github.com/massalabs/massa"

# massa models
[dependencies.massa_models]
git = "https://github.com/massalabs/massa"

# massa models
[dependencies.massa_signature]
git = "https://github.com/massalabs/massa"

# massa wallet
[dependencies.massa_wallet]
git = "https://github.com/massalabs/massa"

# massa time
[dependencies.massa_time]
git = "https://github.com/massalabs/massa"

# From https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3 # Speed-up the CI

[profile.dev]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
strip = true
# strip = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
strip = true
# strip = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
