[package]
name = "game_decentralized"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.24"
tungstenite = "0.17"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.21.1", features = ["full"] }
getrandom = { version="0.2", features=["wasm-bindgen"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
wasm-bindgen = "0.2.81"
near-primitives = "0.14.0"

# near sdk
[dependencies.near-jsonrpc-client]
git = "https://github.com/near/near-jsonrpc-client-rs"

# massa sdk
[dependencies.massa_sdk]
git = "https://github.com/massalabs/massa"

# massa models
[dependencies.massa_models]
git = "https://github.com/massalabs/massa"

# massa models
[dependencies.massa_signature]
git = "https://github.com/massalabs/massa"

# TODO: add Solana/Polygon

[profile.dev.package."*"]
opt-level = 3 # Speed-up the CI